Handled polygon exceptions with area-keys project (fix #6)

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "osm-polygon-features"]
 	path = osm-polygon-features
 	url = https://github.com/tyrasd/osm-polygon-features
+[submodule "id-area-keys"]
+	path = id-area-keys
+	url = https://github.com/osmlab/id-area-keys
