Cleanup for old build files

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "osm2geojson"
 version = "0.2.9"
 description = "Parse OSM and Overpass JSON"
 readme = "README.md"
-license = {text = "MIT"}
+license = "MIT"
 authors = [
     {name = "Parfeniuk Mykola", email = "mikola.parfenyuck@gmail.com"}
 ]
@@ -15,7 +15,6 @@ keywords = ["geometry", "gis", "osm", "parsing"]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
-    "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
@@ -150,7 +149,6 @@ ignore = [
 [tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]  # Allow unused imports in __init__.py
 "tests/*" = ["PT009", "PT027", "B017", "ARG", "SIM", "PLR2004"]  # Allow unittest style + test patterns
-"setup.py" = ["SIM115"]  # Allow setup.py patterns
 
 [tool.ruff.lint.isort]
 known-first-party = ["osm2geojson"]
