Update Typecheck on CI; Use version from pyproject.toml; Solve some lint issues

--- a/.github/workflows/pythonpackagetest.yml
+++ b/.github/workflows/pythonpackagetest.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Type check with mypy
         run: |
-          mypy osm2geojson --ignore-missing-imports || true
+          mypy osm2geojson --ignore-missing-imports
 
   test:
     runs-on: ${{ matrix.os }}
